Fixed linear gradient transparency issues on Safari
Safari doesn't seem to render transparent colors in linear gradients the same as Chrome does
The solution was to create two transparent colors:
a white transparency and a black transparency
and use to use the other when an issue appeared.

--- a/web/app/themes/ppj/src/sass/components/search.sass
+++ b/web/app/themes/ppj/src/sass/components/search.sass
@@ -337,13 +337,13 @@
 
       &:nth-child(2):before
         @include bp('portrait')
-          background: linear-gradient(to bottom, $color-white, $color-transparent)
+          background: linear-gradient(to bottom, $color-white, $color-transparent2)
           top: 0
           z-index: 1
 
       &:nth-last-child(2):after
         @include bp('portrait')
-          background: linear-gradient(to top, $color-white, $color-transparent)
+          background: linear-gradient(to top, $color-white, $color-transparent2)
           bottom: 0
 
       &:hover:nth-child(2):before
